[JENKINS-41740] rejigger the layout a bit so that icon or link can be ommitted and the spacing is correct

--- a/blueocean-dashboard/src/main/less/placeholder.less
+++ b/blueocean-dashboard/src/main/less/placeholder.less
@@ -26,18 +26,19 @@
     }
 
     .icon, .title, .message {
-        margin-top: 0;
+        margin: 0;
     }
 
-    .icon {
-        margin-bottom: 20px;
-    }
-
-    .title {
-        margin-bottom: 10px;
+    .icon + .title {
+        margin-top: 20px;
     }
 
     .message {
-        margin-bottom: 25px;
+        margin-top: 10px;
+    }
+
+    // for button
+    .message + * {
+        margin-top: 25px;
     }
 }
